--- a/styles.css
+++ b/styles.css
@@ -111,12 +111,12 @@ nav ul li a {
 }
 
 .prev {
-    left: 0; /* Position the arrow at the left edge of the container */
+    left: 0;
     border-radius: 3px 0 0 3px;
 }
 
 .next {
-    right: 0; /* Position the arrow at the right edge of the container */
+    right: 0;
     border-radius: 0 3px 3px 0;
 }
 
@@ -140,15 +140,43 @@ nav ul li a {
     padding-left: 20px;
 }
 
-nav ul li a{
-    color: #fff;
+nav ul li a:hover {
+    background-color: #fff;
+    color: #333;
+}
+
+.github-view, .battleship-game-button {
+    border-radius: 5px;
     text-decoration: none;
-    padding: 10px 15px;
-    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    padding: 16px;
+    color: white;
+    box-sizing: border-box;
+}
+
+.github-view a, .battleship-game-button a {
+    color: inherit; /* Inherit color from parent */
+    text-decoration: none;
+    padding: 16px; /* Even padding on all sides */
+    display: flex; /* Use flexbox for centering */
+    align-items: center; /* Center items vertically */
+    justify-content: center; /* Center items horizontally */
+    text-align: center;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-nav ul li a:hover{
-    background-color: #fff;
-    color:#333;
+.github-view a:hover, .battleship-game-button a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.pdf-container {
+    width: 100%;
+    height: 70vh; /* Full viewport height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
